[project]
name = "docid-parser"
version = "0.1.0"
description = "Extract document IDs from .docx and .txt files using CLI"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "docx2python (>=3.5.0,<4.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
